installed django-allauth authentication framework.

--- a/thinkforyouth/templates/base.html
+++ b/thinkforyouth/templates/base.html
@@ -5,6 +5,16 @@
     <title>{% block title %}Think for Youth{% endblock %}</title>
 </head>
 <body>
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+                <li class="{{ message.tags }}">
+                    {{ message|safe }}
+                </li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+
     {% block content %}
     {% endblock %}
 </body>
