setup Gulpfile to compile SASS to CSS

--- a/thinkforyouth/templates/base.html
+++ b/thinkforyouth/templates/base.html
@@ -1,8 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Think for Youth{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'css/app.css' %}">
 </head>
 <body>
     {% if messages %}
